test/scc_test/decl/semantic-errors/048.a
048.t:3:16: error: 'inline' specifier allowed on function declarations only